fix(ui): more readable

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,3 +1,38 @@
 [ng-click] {
     cursor: pointer;
 }
+
+.navbar {
+    border-radius: 0px !important;
+    margin-bottom: -1px !important;
+}
+
+.sidebar {
+    width: 360px;
+    float: left;
+    padding: 10px 15px; // 15px to match the navbar padding-left
+    padding-top: 50px;
+    background-color: #f8f8f8;
+    border-right: 1px solid #e7e7e7;
+    min-height: calc(~"100vh - 50px");
+    h1 {
+        margin-top: 0;
+    }
+
+    overflow-x: hidden;
+}
+
+.content {
+    padding: 20px;
+    padding-top: 50px;
+    padding-right: 15px; // to match navbar
+    margin-left: 360px;
+    min-height: calc(~"100vh - 50px");
+    h1 {
+        margin-top: 0;
+    }
+}
+
+body h1 {
+    font-size: 18px;
+}
